建立练习模式，脚本 TODO

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 HELP.md
+
+# practice
+src/main/java/org/algorithm/chenjk/practice/z*
+
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
